# excel_gst

./: .gitignore  README.md  pyproject.toml
excel_gst/: config.py  gui.ui  main.py
excel_gst/app/: gui.py
excel_gst/utils/: excel.py
