[tool.poetry]
name = "excel-gst"
version = "1.0.0"
description = "An excel file manipulator made for dad"
authors = ["Akhil <akhilaug2003@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
openpyxl = "3.0.7"
PyQt5 = "5.15.4"

[tool.poetry.dev-dependencies]
black = "^21.8b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"